--- a/examples/styles.css
+++ b/examples/styles.css
@@ -6,7 +6,7 @@ body {
 
 h1 {
     font-family: 'Lexend SemiBold';
-    font-size: 16pt;
+    font-size: 1.5em;
 }
 
 code {
@@ -17,16 +17,16 @@ header, footer {
     display: block;
     background-color: #007c7c;
     color: #ececf0;
-    font-size: 10pt;
-    padding: 5pt;
+    font-size: 0.9em;
+    padding: .3em;
 }
 
 header {
-    margin-bottom: 10pt;
+    margin-bottom: .6em;
 }
 
 footer {
-    margin-top: 10pt;
+    margin-top: .6em;
 }
 
 nav span {
@@ -36,9 +36,9 @@ nav span {
     width: 100px;
     text-decoration: none;
     text-align: center;
-    margin: 5pt;
-    padding: 5pt;
-    border-radius: 5px;
+    margin: .3em;
+    padding: .3em;
+    border-radius: .3em;
 }
 
 nav span:hover {
@@ -50,8 +50,8 @@ nav span:hover {
 a {
     background-color: #ececf0;
     color: #007c7c;
-    padding-left: 2pt;
-    padding-right: 2pt;
+    padding-left: .2em;
+    padding-right: .2em;
 }
 
 a:hover, a:active {
@@ -62,7 +62,7 @@ a:hover, a:active {
 /* Class selector */
 .div-arial {
     font-family: Arial;
-    font-size: 10pt;
+    font-size: 1em;
 }
 
 /* ID selector */
