--- a/examples/styles.css
+++ b/examples/styles.css
@@ -33,7 +33,7 @@ nav span {
     background-color: #ececf0;
     color: black;
     display: inline-block;
-    width: 100px;
+    width: 8em;
     text-decoration: none;
     text-align: center;
     margin: .3em;
