Add new examples.

--- a/examples/styles.css
+++ b/examples/styles.css
@@ -1,7 +1,8 @@
 /* Element selector */
 body {
     font-family: 'Lexend Light', sans-serif;
-    margin: 0pt;
+    margin: 0;
+    padding: 0;
 }
 
 h1 {
