--- a/examples/newyear/styles.css
+++ b/examples/newyear/styles.css
@@ -11,7 +11,6 @@ body {
     --body-padding-left: 60px;
 
     margin: 0;
-    padding: 40px var(--body-padding-left) 40px var(--body-padding-left);
     min-width: 300px;
     background: linear-gradient(90deg, var(--c-pastel-yellow), var(--c-pastel-mint));
 
@@ -19,6 +18,13 @@ body {
     font-size: 14px;
     text-align: justify;
     color: var(--c-body-text);
+}
+
+.container {
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-left: 10%;
+    width: 80%;
 }
 
 .row-heading {
@@ -92,16 +98,24 @@ td {
 }
 
 
-@media (min-width: 768px) {
+@media (min-width: 700px) {
     body {
         font-size: 16px;
-        --body-padding-left: 80px;
+    }
+
+    .container {
+        margin-left: 15%;
+        width: 70%;
     }
 }
 
 @media (min-width: 1000px) {
     body {
         font-size: 18px;
-        --body-padding-left: 100px;
+    }
+
+    .container {
+        margin-left: 20%;
+        width: 60%;
     }
 }
