--- a/examples/newyear/styles.css
+++ b/examples/newyear/styles.css
@@ -79,9 +79,9 @@ td {
 
 .option-number {
     display: inline-block;
-    padding: var(--option-number-padding);
     width: calc(var(--option-number-size) + var(--option-number-padding) * 2);
     height: calc(var(--option-number-size) + var(--option-number-padding) * 2);
+    line-height: calc(var(--option-number-size) + var(--option-number-padding) * 2);
     background: linear-gradient(90deg, var(--c-pastel-mint), var(--c-pastel-yellow));
     border-radius: 50%;
     box-shadow: 0 0 3px 1px var(--c-highlight-text);
