--- a/examples/flex/styles.css
+++ b/examples/flex/styles.css
@@ -72,3 +72,12 @@ h1 {
     min-width: 80px;
     font-size: .9em;
 }
+
+
+@media (min-width: 1000px) {
+    body {
+        margin-left: 100px;
+        margin-right: 100px;
+        font-size: 20px;
+    }
+}
