--- a/examples/prescription/css/style.css
+++ b/examples/prescription/css/style.css
@@ -179,6 +179,12 @@ button {
     color: var(--color-dark);
 }
 
+#prescription-table-body tr:nth-child(2n+3) input {
+    background-color: var(--color-medium);
+    color: var(--color-dark);
+}
+
+
 /* DIV-MESSAGE */
 #div-message {
     margin-top: 1em;
