--- a/examples/prescription/css/style.css
+++ b/examples/prescription/css/style.css
@@ -3,7 +3,7 @@
     --color-gray: #f0f0f0;
     --color-dark: #333;
     --color-medium: #637eba;
-    --color-bright: yellow;
+    --color-bright: #f9f871;
 }
 
 body, input, button {
